[package]
name = "boltdb-rs"
version = "0.0.1"
authors = ["魏仁言 <weirenyan@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fnv = "1.0.7"
log = "0.4.20"
memoffset = "0.9.0"
once_cell = "1.19.0"
page_size = "0.6.0"
thiserror = "1.0.57"

[dev-dependencies]
env_logger = "0.11.2"
tempfile = "3.10.1"
