[package]
name = "boltdb-rs"
version = "0.0.1"
authors = ["魏仁言 <weirenyan@yahoo.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytes = "1.10.0"
fnv = "1.0.7"
fs4 = "0.13.1"
log = "0.4.20"
memmap2 = "0.9.5"
memoffset = "0.9.0"
once_cell = "1.19.0"
page_size = "0.6.0"
parking_lot = "0.12.3"
thiserror = "1.0.57"

[dev-dependencies]
env_logger = "0.11.2"
tempfile = "3.10.1"
